# pi-pico-Multimedia-Controller

./: README.md
Firmware/Rotary_check/: Rotary.c
Firmware/USB_HID_MULTIMEDIA/: CMakeLists.txt  Rotary.c  Rotary.h  tusb_config.h  usb_mouse_device.c
Rotary_check/: CMakeLists.txt  Rotary.h  main.c
USB_HID_MULTIMEDIA/: usb_descriptors.c  usb_descriptors.h
